--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,7 +16,7 @@ security:
             security: false
 
         docs:
-            pattern:   ^/api/docs
+            pattern:   ^/api/(graphql|docs)
             stateless: true
             anonymous: true
             guard:
@@ -46,4 +46,5 @@ security:
     access_control:
         - { path: ^/api/token, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/docs,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/graphql,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
