--- a/kubernetes/review-system-dev.yaml
+++ b/kubernetes/review-system-dev.yaml
@@ -21,33 +21,22 @@ spec:
         type: backend
     spec:
       initContainers:
-        - name: drop-old-database
-          image: app-api:local
+        - name: wait-for-database
+          image: busybox
+          imagePullPolicy: "IfNotPresent"
+          command:
+            - sh
+            - -c
+            - 'until nc -w 1 -z mysql 3306 &> /dev/null; do sleep 1; done'
+        - name: reset-environment
+          image: k911/inz-api:local
           envFrom:
             - configMapRef:
                 name: review-system-dev-envs
-          args: ["doctrine:database:drop", "--force", "--if-exists"]
-        - name: create-new-database
-          image: app-api:local
-          envFrom:
-            - configMapRef:
-                name: review-system-dev-envs
-          args: ["doctrine:database:create", "--if-not-exists"]
-        - name: update-db-schema
-          image: app-api:local
-          envFrom:
-            - configMapRef:
-                name: review-system-dev-envs
-          command: ["doctrine:schema:update", "--force"]
-        - name: load-fixtures
-          image: app-api:local
-          envFrom:
-            - configMapRef:
-                name: review-system-dev-envs
-          command: ["doctrine:fixtures:load", "-n"]
+          command: ["bin/reset-env"]
       containers:
         - name: api
-          image: app-api:local
+          image: k911/inz-api:local
           envFrom:
             - configMapRef:
                 name: review-system-dev-envs
@@ -66,13 +55,17 @@ spec:
             httpGet:
               path: /status?local=true
               port: http
-            initialDelaySeconds: 3
+            initialDelaySeconds: 1
+            successThreshold: 1
+            failureThreshold: 3
             periodSeconds: 5
           readinessProbe:
             httpGet:
               path: /status
               port: http
-            initialDelaySeconds: 5
+            initialDelaySeconds: 3
+            successThreshold: 1
+            failureThreshold: 3
             periodSeconds: 15
 ---
 apiVersion: apps/v1
@@ -84,7 +77,7 @@ metadata:
     environment: development
     type: command-consumer
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: review-system
@@ -97,9 +90,17 @@ spec:
         environment: development
         type: command-consumer
     spec:
+      initContainers:
+        - name: wait-for-broker
+          image: busybox
+          imagePullPolicy: "IfNotPresent"
+          command:
+            - sh
+            - -c
+            - 'until nc -w 1 -z rabbitmq 5672 &> /dev/null; do sleep 1; done'
       containers:
         - name: worker
-          image: app-command-consumer:local
+          image: k911/inz-command-consumer:local
           envFrom:
             - configMapRef:
                 name: review-system-dev-envs
@@ -121,7 +122,7 @@ metadata:
     environment: development
     type: event-consumer
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: review-system
@@ -134,9 +135,17 @@ spec:
         environment: development
         type: event-consumer
     spec:
+      initContainers:
+        - name: wait-for-broker
+          image: busybox
+          imagePullPolicy: "IfNotPresent"
+          command:
+            - sh
+            - -c
+            - 'until nc -w 1 -z rabbitmq 5672 &> /dev/null; do sleep 1; done'
       containers:
         - name: worker
-          image: app-event-consumer:local
+          image: k911/inz-event-consumer:local
           envFrom:
             - configMapRef:
                 name: review-system-dev-envs
